# StrategyGame

./: CMakeLists.txt  GameActions.cpp  main.cpp  mapa.txt
Board/: LoadBoard.cpp
GameActions/: GameActions.cpp  GamePreparing.cpp  NewRound.cpp  newGame.cpp
Headers/: Board.h  Player.h  Units.h
Interfaces/: UnitsFightingActions.cpp  WorkerUnitActions.cpp
Player/: Player.cpp
Units/: Archer.cpp  Base.cpp  Catapult.cpp  FightingUnit.cpp  Knight.cpp  Pikeman.cpp  Ram.cpp  Swordsman.cpp  Unit.cpp  Worker.cpp
gameActions/: GameActions.cpp  GamePreparing.cpp  NewRound.cpp
